// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders while running 1`] = `
<div
  class="sc-dkXrac gGWXiv"
>
  <div
    class="sc-eCQiwC jiFuvG"
  >
    <span
      class="sc-jSprwV"
    >
      0
    </span>
    <span
      class="sc-gKkivs jfxkQN"
    >
      42
    </span>
  </div>
  <button
    class="sc-bdDrbm sc-gtcAbF cnmbZy klhwKN"
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  class="sc-dkXrac gGWXiv"
>
  <div
    class="sc-hKVryf fFVRLF"
  >
    🛌🛌
  </div>
  <button
    class="sc-bdDrbm sc-gtcAbF Sizph klhwKN"
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  class="sc-dkXrac gGWXiv"
>
  <div
    class="sc-hKVryf fFVRLF"
  >
    🍅
  </div>
  <button
    class="sc-bdDrbm sc-gtcAbF Sizph klhwKN"
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  class="sc-dkXrac gGWXiv"
>
  <div
    class="sc-hKVryf fFVRLF"
  >
    🛌
  </div>
  <button
    class="sc-bdDrbm sc-gtcAbF Sizph klhwKN"
  >
    Start
  </button>
</div>
`;
